# blazinglyfast-url-shortener

./: Cargo.toml  README.md
src/: encryption.rs  error.rs  main.rs  model.rs  service.rs  test.rs  utils.rs
src/routes/: url.rs
src/static/: index.html
