[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
mongodb = "3.2.0"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
serde = { version = "1.0.217", features = ["derive"] }
dotenv = "0.15.0"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
aes-gcm = "0.10.3"
base64 = "0.21.7"
rand_core = { version = "0.6", features = ["std"] }
actix-files = "0.6.2"
actix-cors = "0.6.4"
